<resources>
    <string name="app_name"> Android Training App</string>
    <string name="button">Button</string>
    <string name="type_something">Type Something</string>
    <string name="button1">Button1</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="textview">TextView</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="post">Post</string>
    <string name="gaurav_kumar_kashodhan">Gaurav kumar kashodhan</string>
    <string name="gaurav_kumar">Gaurav_kumar</string>
    <string name="number">number</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="press">Press</string>
    <string name="Long_Text">This is a Longer Text</string>
    <string name="Message">Qoutes From Renowned Authors</string>
    <string name="a">A</string>
    <string name="highscore">HighScore :</string>
    <string name="sharedPrefKey">com.example.layout.PREF_KEY</string>
    <string name="sec">sec</string>
    <string name="time">Time</string>
    <string name="_0">0</string>
    <string name="try_again">Try again</string>
    <string name="start">start</string>
    <string name="GameOver">Game Over</string>
    <string name="tap">Tap</string>
    <string name="click">click</string>
    <string name="settings">Settings</string>
    <string name="feedback">FeedBack</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm PassWord</string>
    <string name="songname">SongName</string>
    <string name="link">Link</string>
    <string name="add">ADD</string>
    <string name="Update">Update</string>
    <string name="Delete">Delete</string>
    <string name="Roll_no">Roll No</string>
    <string name="Class">Class</string>
    <string name="Address">Address</string>
    <string name="father_s_name">Father\'s Name</string>
    <string name="mother_s_name">Mother\'s Name</string>
    <string name="Contact_Number">Contact Number</string>
    <string name="Submit">Submit</string>
    <string name="id">ID</string>
    <string name="facebook_application_id" translatable="false">1:228736357241:android:d00d7f44b6a96dc1ce95a8</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1:228736357241:android:d00d7f44b6a96dc1ce95a8</string>
    <string name="SignOut">SignOut</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="phone_verification">Phone verification</string>
    <string name="phone_number">Phone Number</string>
    <string name="Verify_number">Verify Number</string>
    <string name="Upload">upload</string>
    <string name="Get_image">Get Image</string>
    <string name="Image_list">Image List</string>
    <string name="Or">Or</string>
    <string name="Verfication_code">Verfication Code</string>
    <string name="verify_code">Verify Code</string>
    <string name="Status">Status</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="area">Area</string>
    <string name="get">get</string>
    <string name="Frequent">Frequent Calls</string>
    <string name="recent_calls">Recent Calls</string>
    <string name="Contact_list">Contact List</string>
    <string name="intentservice">IntentService</string>
    <string name="service">Service</string>
    <string name="on_bind">On Bind</string>
    <string name="foreground">Foreground</string>
    <string name="m_on_bind">M - On Bind</string>
    <string name="little_blurred">Little Blurred</string>
    <string name="more_blurred">More Blurred</string>
    <string name="most_blurred">Most Blurred</string>
    <string name="Go">GO</string>
    <string name="outputMessage">Image Saved in Gallery</string>
    <string name="Set_blur_level">Set Blur Level</string>
    <string name="Undo">Undo</string>
    <string name="save">Save</string>
    <string name="savingMessage">back press to save Image</string>
    <string name="Blurlvlmessage">Set Blur Level</string>
    <string name="signup">signUp</string>
    <string name="done">Done</string>
    <string name="signout">Signout</string>
    <string name="songs">Songs</string>
    <string name="add_songs">Add</string>
    <string name="profile">Profile</string>
    <string name="friends">Friends</string>
    <string name="favourites">Favourites</string>
    <string name="songs_list">Songs List</string>
    <string name="song">Song</string>
    <string name="optionsbutton">OptionsButton</string>
    <string name="dialog_fragment">dialog fragment</string>
    <string name="alert_dialog">alert Dialog</string>
    <string name="get_notification">get Notification</string>
    <string name="get_progress_notifi">get progress notifi</string>
    <string name="expandable_notif">expandable notif</string>
    <string name="bubble">Bubble</string>
    <string name="username">userName</string>
    <string name="openDrawer">open</string>
    <string name="closeDrawer">close</string>


</resources>
