<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/songListFragment"
        android:title="@string/songs"
        android:icon="@drawable/ic_music_note_black_24dp"
        />

    <item
        android:id="@+id/friendsList"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/friends"
        />

    <item
        android:id="@+id/addSongFragment"
        android:title="@string/add_songs"
        android:icon="@drawable/ic_add_black_24dp"
        />
    <item
        android:title="@string/favourites"
         android:id="@+id/favSongs"
        android:icon="@drawable/ic_favorite_black_24dp"
        />
    <item
        android:id="@+id/userProfileFragment"
        android:title="@string/profile"
        android:icon="@drawable/ic_perm_identity_black_24dp"
        />

</menu>