<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >
    <Button
        android:id="@+id/btnShowNotif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_notification"
        />
    <Button
        android:id="@+id/btnShowProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_progress_notifi"
        />

    <Button
        android:id="@+id/btnENotif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expandable_notif"
        />
    <Button
        android:id="@+id/btnBubble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bubble"
        />



</LinearLayout>