<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivClickedImage"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:scaleType="fitCenter"
        android:src="@drawable/man_image"
        app:layout_constraintBottom_toTopOf="@id/tvMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="3dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/tvMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/Set_blur_level"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivClickedImage" />

    <RadioGroup
        android:id="@+id/rgOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnGo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMessage">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbBLittleBlurred"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/little_blurred"
            android:buttonTint="@color/colorPrimary"
            />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbMoreBlurred"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more_blurred"
            android:buttonTint="@color/colorPrimary"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbMostBlurred"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/most_blurred"
            android:buttonTint="@color/colorPrimary"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Go"
        app:layout_constraintTop_toBottomOf="@id/rgOptions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnUndo"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnUndo"
        android:text="@string/Undo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rgOptions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnGo"
        />

</androidx.constraintlayout.widget.ConstraintLayout>