<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/song">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSongName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Platform.MaterialComponents.Light"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/link">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSongUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Platform.MaterialComponents.Light"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/done"
        />





</LinearLayout>